<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:background="@color/colorWhite">

    <TextView
        android:id = "@+id/message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/colorWhite"
        android:background="@color/colorBlueApp"
        android:padding = "16dp"
        android:layout_marginBottom="16dp"
        android:textSize = "25sp"
        android:text = "@string/load_course_title"
        />
    <TextView
        android:visibility="gone"
        android:id="@+id/messageError"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/colorRedApp"
        android:textSize="20dp"
        android:text = "@string/load_course_error_message"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:id = "@+id/loading"
            android:layout_width="0dp"
            android:text = "загрузка..."
            android:alpha="0"
            android:gravity="center"
            android:layout_marginLeft="10dp"
            android:textSize="15dp"
            android:textColor="@color/colorDarkBlueApp"
            android:textAlignment="center"
            android:layout_weight="1"
            android:layout_height="match_parent"/>
    <Button
        style="@style/newButton"
        android:id="@+id/cancel"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:textSize="15dp"
        android:background="@color/colorWhite"
        android:textColor="@color/colorAccent"
        android:stateListAnimator="@null"
        android:text="@string/cancel" />
        <Button
            style="@style/newButton"
            android:id="@+id/accept"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:textSize="15dp"
            android:background="@color/colorWhite"
            android:textColor="@color/colorBlueApp"
            android:stateListAnimator="@null"
            android:text="@string/accept" />
    </LinearLayout>
</LinearLayout>