<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:id="@+id/test"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">


        <LinearLayout android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id = "@+id/title_template"
            app:layout_constraintTop_toTopOf="parent"
            android:orientation="vertical">

            <TextView
                style="@style/fragmentName"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:text = "@string/fragment_name_time"/>
            <View
                style="@style/divider"
                app:layout_constraintTop_toBottomOf="@id/cards"
                app:layout_constraintStart_toStartOf="parent"
                />
        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerView"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:padding="20dp"
            android:orientation="horizontal"
            android:visibility="visible"
            android:gravity = "center"/>

        <TextView
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:text = "@string/select_courses_help"
            android:layout_margin="30dp"
            android:layout_gravity="center"
            android:visibility="gone"
            android:textAlignment="center"
            android:textColor="@color/colorDarkBlueApp"
            android:textSize="20dp"
            android:gravity="center">
        </TextView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="bottom"
            android:gravity="bottom"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:orientation="horizontal">

                <Button
                    style="@style/buttonSecond"
                    android:id="@+id/buttonCancel"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:text="@string/button_i_select_myself" />

                <Button
                    style="@style/buttonMain"
                    android:id="@+id/buttonAccept"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:text="@string/accept"/>
            </LinearLayout>
        </LinearLayout>
</LinearLayout>