<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/fragmentBack"
    android:gravity="top"
    tools:context=".activities.testTranslate">

    <com.google.android.material.card.MaterialCardView
        style = "@style/cardM"
        app:contentPadding="0dp"
        android:layout_width="match_parent"
        app:cardCornerRadius="3dp"
        android:layout_height="wrap_content"
        android:gravity = "center"
        app:cardBackgroundColor="@color/colorWhite">


        <ScrollView
            android:overScrollMode="never"
            android:id = "@+id/testScroll"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                style="@style/testCommand"
                android:id="@+id/part"
                android:text="@string/write_the_word"/>

            <Space
                android:layout_width="match_parent"
                android:layout_height="45dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity = "center"
                android:weightSum="3"
                android:orientation="horizontal">
                <ImageView
                    android:id="@+id/soundButton"
                    android:layout_width="0dp"
                    android:layout_margin="10dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_gravity="center"
                    android:adjustViewBounds="true"
                    app:srcCompat="@drawable/playsoundtest" />
            </LinearLayout>
            <Space
                android:layout_width="match_parent"
                android:layout_height="60dp" />


            <EditText
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:layout_marginLeft="32dp"
                android:layout_marginRight="32dp"
                android:hint = "@string/hint_write_text"
                android:textColorHint="@color/colorDarkBlueApp"
                android:id = "@+id/answer"
                android:inputType="textVisiblePassword|textNoSuggestions|textCapSentences|textImeMultiLine"
                android:textAlignment="center"
                android:textColor = "@color/colorWhiteExample"
                android:background="@color/colorLightGrey"
                android:padding="8dp"
                android:textSize="24dp"
                />

            <Space
                android:layout_width="match_parent"
                android:layout_height="45dp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:layout_gravity="center"
                android:gravity="center"
                android:orientation="horizontal">
                <Button
                    style="@style/newButton"
                    android:id="@+id/skip"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="match_parent"
                    android:visibility="gone"
                    android:layout_gravity="center"
                    android:background="@color/colorWhite"
                    android:textColor="@color/colorBlueApp"
                    android:stateListAnimator="@null"
                    android:text="@string/skip" />
                <Button
                    style="@style/newButton"
                    android:id="@+id/check"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:textColor="@color/colorBlueApp"
                    android:background="@color/colorWhite"
                    android:stateListAnimator="@null"
                    android:text="@string/check" />
            </LinearLayout>

        </LinearLayout>
        </ScrollView>

    </com.google.android.material.card.MaterialCardView>


</LinearLayout>