<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:background="@color/colorWhite"
    android:layout_height="match_parent">

    <TextView
        android:id = "@+id/message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="50dp"
        android:paddingBottom="30dp"
        android:paddingLeft="40dp"
        android:paddingRight="40dp"
        android:textSize="24dp"
        android:fontFamily="@font/heebo_black"
        android:text="@string/start_help_title"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        android:gravity="center"
        app:layout_constraintStart_toStartOf="parent"
        android:textColor="@color/colorBlack"
        app:layout_constraintTop_toBottomOf="@id/guideline" />

    <ImageView
        android:id="@+id/pct"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:padding="50dp"
        android:src="@drawable/ic_help"
        app:layout_constraintBottom_toTopOf="@id/guideline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        style="@style/buttonSecond"
        android:id = "@+id/buttonNo"
        android:layout_width="0dp"
        android:text = "@string/button_later"
        android:layout_marginBottom="70dp"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/guideline2"
        app:layout_constraintTop_toBottomOf="@id/message"
        app:layout_constraintBottom_toBottomOf="parent"
        />
    <Button
        style="@style/buttonMain"
        android:id = "@+id/buttonYes"
        android:layout_width="0dp"
        android:text = "@string/button_set"
        android:layout_marginBottom="70dp"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="10dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginStart="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/guideline2"
        app:layout_constraintTop_toBottomOf="@id/message"
        app:layout_constraintBottom_toBottomOf="parent"
        />



    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.5" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />


</androidx.constraintlayout.widget.ConstraintLayout>